# 0361_audio_infra

./: .gitignore  Dockerfile  config.yml  main.py  pyproject.toml
containers/whisper/: Dockerfile  constants.py  main.py  requirements.txt
containers/whisper/src/: api.py  cloud_service.py  processor.py
containers/whisperx/: Dockerfile  requirements.txt
containers/whisperx/models/: models.py
containers/whisperx/src/: api.py  app.py  processor.py
scripts/: build-and-deploy.sh
src/: api.py  client.py  embedding.py  keywords.py  learning_pinecone.py  models.py  parse_data.py  processor.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_google_stt.py
